--- a/ec2_gather_facts/tasks/main.yml
+++ b/ec2_gather_facts/tasks/main.yml
@@ -1,11 +1,24 @@
 ---
-- name: Get instances
-  ec2_instance_facts:
+- name: Chantge instances state by tag
+  ec2:
     aws_access_key: "{{ AWS_ACCESS_KEY }}"
     aws_secret_key: "{{ AWS_SECRET_KEY }}"
     region: "{{ AWS_REGION }}"
-    # filter:
-  register: ec2_facts
+    state: running
+    wait: yes
+    instance_tags:
+      Name: test
+  register: ec2
 
-- debug:
-    var: ec2_facts
+- name: Output IP addresses of instance
+  debug:
+    msg: "IP address: {{ item.public_ip }}"
+  loop: "{{ ec2.instance }}"
+
+- name: add host to inventory
+  add_host:
+    hostname: "{{item.public_ip }}"
+    groupname: test
+    ansible_ssh_common_args: "-o StrictHostKeyChecking=no"
+    ansible-ssh_private_key_file: ~/.ssh/ansible.pem
+  loop: "{{ ec2.instance }}"
